feat: update scanner functionality Backup and restore plan
